--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="card" role="main">
       <img class="card-image" src="./images/image-equilibrium.jpg" alt="Card image" />
+
       <h2 class="card-name">Equilibrium #3429</h2>
       <p class="card-description">Our Equilibrium collection promotes balance and calm.</p>
 
@@ -33,8 +34,11 @@
       </div>
     </div>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+        <a href="www.github.com/eligijuslinkevicius">Eligijus Linkevicius</a>.
+      </div>
+    </footer>
   </body>
 </html>
